force-app/main/default/objects/NBA_Rule_Criteria__c/NBA_Rule_Criteria__c.object-meta.xml
<CustomObject>
    <label>NBA Rule Criteria</label>
    <nameField>
        <displayFormat>CRITERIA-{000}</displayFormat>
        <label>NBA Rule Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NBA Rule Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>