force-app/main/default/objects/NBA_Rule_Criteria__c/fields/Base_Object__c.field-meta.xml
<CustomField>
    <fullName>Base_Object__c</fullName>
    <description>Base object for each rule within a rule set</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Base Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>