force-app/main/default/objects/NBA_Rule_Criteria__c/fields/Current_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Current_Criteria__c</fullName>
    <description>this holds all the criteria logic for one object within a rule set</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>