force-app/main/default/objects/NBA_Rule_Criteria__c/fields/NBA_Rule_Set__c.field-meta.xml
<CustomField>
    <fullName>NBA_Rule_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to the nba rule set record</description>
    <label>NBA Rule Set</label>
    <referenceTo>NBA_Rule_Set__c</referenceTo>
    <relationshipLabel>NBA Rule Criteria</relationshipLabel>
    <relationshipName>NBA_Rule_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>