force-app/main/default/objects/NBA_Rule_Criteria__c/fields/Previous_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Previous_Criteria__c</fullName>
    <description>this holds all the previous criteria logic for one object within a rule set</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>