force-app/main/default/objects/NBA_Rule_Criteria__c/fields/Talking_Points__c.field-meta.xml
<CustomField>
    <fullName>Talking_Points__c</fullName>
    <description>talking points for each object within a rule set</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Talking Points</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>